vector store with retriver and rag chain

--- a/9-ChatbotWithHistory/1-simplechatbot.ipynb
+++ b/9-ChatbotWithHistory/1-simplechatbot.ipynb
@@ -333,6 +333,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Managing conversation history\n",
+    "from langchain_core.messages import trim_messages\n",
+    "trimmer = trim_messages(\n",
+    "    token_counter = model,\n",
+    "    max_tokens=45,\n",
+    "    strategy = 'last',\n",
+    "    include_system = True,\n",
+    "    allow_partial = False,\n",
+    "    start_on = \"human\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content=\"you're a good assistant\"),\n",
+       " HumanMessage(content='I like vanilla ice cream'),\n",
+       " AIMessage(content='nice'),\n",
+       " HumanMessage(content='whats 2 + 2'),\n",
+       " AIMessage(content='4'),\n",
+       " HumanMessage(content='thanks'),\n",
+       " AIMessage(content='no problem!'),\n",
+       " HumanMessage(content='having fun?'),\n",
+       " AIMessage(content='yes!')]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages = [\n",
+    "    SystemMessage(content=\"you're a good assistant\"),\n",
+    "    HumanMessage(content=\"hi! I'm bob\"),\n",
+    "    AIMessage(content=\"hi!\"),\n",
+    "    HumanMessage(content=\"I like vanilla ice cream\"),\n",
+    "    AIMessage(content=\"nice\"),\n",
+    "    HumanMessage(content=\"whats 2 + 2\"),\n",
+    "    AIMessage(content=\"4\"),\n",
+    "    HumanMessage(content=\"thanks\"),\n",
+    "    AIMessage(content=\"no problem!\"),\n",
+    "    HumanMessage(content=\"having fun?\"),\n",
+    "    AIMessage(content=\"yes!\"),\n",
+    "]\n",
+    "trimmer.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#RunnablePassthrough.assign(messages=itemgetter(messages)| trimmer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "chain =(\n",
+    "    RunnablePassthrough.assign(messages=itemgetter(\"messages\")| trimmer)\n",
+    "    | prompt \n",
+    "    | model\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"As an AI, I don't know your preferences! \\n\\nWhat's your favorite ice cream flavor? 😊🍦  \\n\", response_metadata={'token_usage': {'completion_tokens': 29, 'prompt_tokens': 82, 'total_tokens': 111, 'completion_time': 0.052727273, 'prompt_time': 0.00231875, 'queue_time': 0.010984707, 'total_time': 0.055046023}, 'model_name': 'gemma2-9b-it', 'system_fingerprint': 'fp_10c08bf97d', 'finish_reason': 'stop', 'logprobs': None}, id='run-6c841bfb-0523-4fdb-ae6f-c88bfa76d8a7-0', usage_metadata={'input_tokens': 82, 'output_tokens': 29, 'total_tokens': 111})"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = chain.invoke({\n",
+    "    'messages': messages + [HumanMessage(content='Which ice cream do I like?')],\n",
+    "    'language':'English'\n",
+    "})\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='आपने पूछा था कि 2 + 2 क्या है। \\n', response_metadata={'token_usage': {'completion_tokens': 20, 'prompt_tokens': 82, 'total_tokens': 102, 'completion_time': 0.036363636, 'prompt_time': 0.003286927, 'queue_time': 0.010744459999999999, 'total_time': 0.039650563}, 'model_name': 'gemma2-9b-it', 'system_fingerprint': 'fp_10c08bf97d', 'finish_reason': 'stop', 'logprobs': None}, id='run-9cf7053f-986e-4fcd-ac48-31af496f704c-0', usage_metadata={'input_tokens': 82, 'output_tokens': 20, 'total_tokens': 102})"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = chain.invoke({\n",
+    "    'messages': messages + [HumanMessage(content='Which math problem did I ask?')],\n",
+    "    'language':'Hindi'\n",
+    "})\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"As an AI, I don't have access to past conversations or any personal information about you, including your name.  \\n\\nIf you'd like to tell me your name, I'd be happy to use it! 😊  \\n\\n\", response_metadata={'token_usage': {'completion_tokens': 52, 'prompt_tokens': 80, 'total_tokens': 132, 'completion_time': 0.094545455, 'prompt_time': 0.002865669, 'queue_time': 0.009965350000000001, 'total_time': 0.097411124}, 'model_name': 'gemma2-9b-it', 'system_fingerprint': 'fp_10c08bf97d', 'finish_reason': 'stop', 'logprobs': None}, id='run-9a42a85a-62a3-4102-84a0-16de96474d98-0', usage_metadata={'input_tokens': 80, 'output_tokens': 52, 'total_tokens': 132})"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# wrap in message history\n",
+    "config4 = {\"configurable\":{\"session_id\":\"chat5\"}}\n",
+    "with_message_history = RunnableWithMessageHistory(chain,get_session_history=get_session_history,input_messages_key='messages')\n",
+    "with_message_history.invoke(\n",
+    "    {\n",
+    "        'messages': messages + [HumanMessage(content='What is my name?')],\n",
+    "        'language':'English'\n",
+    "    },\n",
+    "    config=config4\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='आपने 2 + 2 का सवाल पूछा था!  😊 \\n', response_metadata={'token_usage': {'completion_tokens': 22, 'prompt_tokens': 82, 'total_tokens': 104, 'completion_time': 0.04, 'prompt_time': 0.002697039, 'queue_time': 0.051840286, 'total_time': 0.042697039}, 'model_name': 'gemma2-9b-it', 'system_fingerprint': 'fp_10c08bf97d', 'finish_reason': 'stop', 'logprobs': None}, id='run-d6dab25d-6ad7-4c92-bd03-7b0b84d9041b-0', usage_metadata={'input_tokens': 82, 'output_tokens': 22, 'total_tokens': 104})"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with_message_history.invoke(\n",
+    "    {\n",
+    "    'messages': messages + [HumanMessage(content='Which math problem did I ask?')],\n",
+    "    'language':'Hindi'\n",
+    "},\n",
+    "    config=config4\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
