Conversational chatbot with history

--- a/9-ChatbotWithHistory/2-chathistorywithvectorstoreandretriver.ipynb
+++ b/9-ChatbotWithHistory/2-chathistorywithvectorstoreandretriver.ipynb
@@ -222,6 +222,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['context', 'question'], messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], template='Answer the question using provided context only.\\n{question}\\nContxt:\\n{context}\\n'))])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "message = '''Answer the question using provided context only.\n",
+    "{question}\n",
+    "Contxt:\n",
+    "{context}\n",
+    "'''\n",
+    "prompt = ChatPromptTemplate.from_messages([('human',message)])\n",
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "  context: VectorStoreRetriever(tags=['Chroma', 'HuggingFaceEmbeddings'], vectorstore=<langchain_chroma.vectorstores.Chroma object at 0x7fd1ce6f9f60>, search_kwargs={'k': 1}),\n",
+       "  question: RunnablePassthrough()\n",
+       "}\n",
+       "| ChatPromptTemplate(input_variables=['context', 'question'], messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], template='Answer the question using provided context only.\\n{question}\\nContxt:\\n{context}\\n'))])\n",
+       "| ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x7fd2a1ef3460>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x7fd2a1ef22f0>, model_name='llama3-8b-8192')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain = {'context':retriver2,'question':RunnablePassthrough()}| prompt | llm \n",
+    "rag_chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='According to the provided context, Parrots are intelligent birds capable of mimicking human speech.', response_metadata={'token_usage': {'completion_tokens': 19, 'prompt_tokens': 55, 'total_tokens': 74, 'completion_time': 0.015833333, 'prompt_time': 0.006654431, 'queue_time': 0.006893348, 'total_time': 0.022487764}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_a97cfe35ae', 'finish_reason': 'stop', 'logprobs': None}, id='run-c935027f-b735-4f31-8361-fb649b7ca30f-0', usage_metadata={'input_tokens': 55, 'output_tokens': 19, 'total_tokens': 74})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain.invoke(\"Tell me about Parrots\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
